--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,13 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@drawable/h3"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:background="@drawable/h1"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -27,106 +26,133 @@
             app:expandedTitleTextAppearance="@android:color/transparent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <android.support.constraint.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-
-                <TextView
-                    android:id="@+id/txtCurrentPlactName"
-                    android:layout_width="189dp"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="109dp"
-                    android:layout_marginLeft="86dp"
-                    android:layout_marginStart="86dp"
-                    android:layout_marginTop="12dp"
-                    android:lineSpacingExtra="18sp"
-                    android:text="Dhaka,Bangladesh"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp"
-                    app:fontFamily="@font/roboto_mono"
-                    app:layout_constraintBottom_toTopOf="@+id/txtToday"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/txtCurrentTemp"
-                    android:layout_width="90dp"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="83dp"
-                    android:text="30°c"
-                    android:textColor="@android:color/white"
-                    android:textSize="36sp"
-                    app:fontFamily="@font/roboto_medium"
-                    app:layout_constraintBottom_toTopOf="@+id/txtCurrentMin"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.431"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/txtCurrentWeatherCondition"
-                    android:layout_width="130dp"
-                    android:layout_height="32dp"
-                    android:layout_marginBottom="16dp"
-                    android:text="Rain"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    app:fontFamily="@font/roboto_mono"
-                    app:layout_constraintBottom_toTopOf="@+id/txtCurrentTemp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <TextView
-                    android:id="@+id/txtToday"
+                <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginEnd="35dp"
-                    android:layout_marginLeft="44dp"
-                    android:layout_marginRight="35dp"
-                    android:layout_marginStart="44dp"
-                    android:text="Today"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp"
-                    app:fontFamily="@font/roboto_mono"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtCurrentMin"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtCurrentPlactName" />
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="1.5"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/txtCurrentMin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_marginBottom="1dp"
-                    android:layout_marginEnd="22dp"
-                    android:layout_marginRight="22dp"
-                    android:drawableLeft="@drawable/down"
-                    android:text="22°c"
-                    android:textSize="24sp"
-                    app:fontFamily="@font/roboto_medium"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/txtCurrentMax"
-                    app:layout_constraintStart_toEndOf="@+id/txtToday"
-                    app:layout_constraintTop_toBottomOf="@+id/txtCurrentTemp" />
+                    <TextView
+                        android:id="@+id/txtCurrentPlactName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/arimo"
+                        android:text="Dhaka,Bangladesh"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp" />
 
-                <TextView
-                    android:id="@+id/txtCurrentMax"
-                    android:layout_width="wrap_content"
-                    android:layout_height="37dp"
-                    android:layout_marginEnd="59dp"
-                    android:layout_marginRight="59dp"
-                    android:drawableLeft="@drawable/up1"
-                    android:text="34°c"
-                    android:textSize="24sp"
-                    app:fontFamily="@font/roboto_medium"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/txtCurrentMin"
-                    app:layout_constraintTop_toTopOf="@+id/txtToday" />
-            </android.support.constraint.ConstraintLayout>
+
+                    <TextView
+                        android:id="@+id/txtCurrentTemp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/arimo"
+                        android:gravity="start"
+                        android:text="30°c"
+                        android:textColor="@android:color/white"
+                        android:textSize="35dp" />
+
+
+                    <TextView
+                        android:id="@+id/txtCurrentWeatherCondition"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/arimo"
+                        android:text="Rain"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp" />
+
+
+                    <TextView
+                        android:id="@+id/txtDetailsVisibily"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="বাতাসের গতিবেগ: 20.6m/s"
+                        android:textColor="@android:color/white"
+                        android:textSize="17dp" />
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/arimo"
+                        android:text="চাপ: 996.0 hPa"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:id="@+id/txtCurrentMin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/arimo"
+                        android:text="সর্বোনিম্ন: 24°c"
+                        android:drawableRight="@drawable/down"
+                        android:drawablePadding="10dp"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp" />
+
+
+                    <TextView
+                        android:id="@+id/txtCurrentMax"
+                        android:drawablePadding="10dp"
+                        android:drawableRight="@drawable/up1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/arimo"
+                        android:text="সর্বোচ্চ:    35°c"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp" />
+
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_marginTop="20dp"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+
+                    <ImageView
+                        android:layout_marginTop="70dp"
+                        android:src="@drawable/weather_image"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp" />
+
+                    <TextView
+                        android:id="@+id/txtSunSet"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/arimo"
+                        android:text="সূর্যোদয়: 5.20 am"
+                        android:textColor="@android:color/white"
+                        android:textSize="18dp" />
+
+                    <TextView
+                        android:id="@+id/txtMoon"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/arimo"
+                        android:text="সূর্যাস্ত:    7.00 pm"
+                        android:textColor="@android:color/white"
+                        android:textSize="18dp" />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
