--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,19 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:fadeScrollbars="false"
     android:scrollbarFadeDuration="0"
+    android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:layout_editor_absoluteY="25dp">
 
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="300dp">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
+            android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_height="wrap_content">
 
@@ -24,6 +26,7 @@
                 android:id="@+id/tabs"
                 app:tabMode="fixed"
                 app:tabGravity="fill"
+                android:fitsSystemWindows="true"
                 android:layout_height="wrap_content">
 
             </android.support.design.widget.TabLayout>
@@ -34,7 +37,7 @@
             android:id="@+id/viewPager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="2000dp">
             
         </android.support.v4.view.ViewPager>
 
