--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <!--<color name="divider">#BDBDBD</color>-->
 
     <color name="colorPrimary">#00BCD4</color>
+    <color name="colorPrimary1">#06b4ca</color>
+    <color name="colorPrimary2">#54c5d2</color>
     <color name="colorPrimaryDark">#0097A7</color>
     <color name="primary_light">#B2EBF2</color>
     <color name="colorAccent">#CDDC39</color>
