--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/colorPrimary3"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
@@ -27,26 +28,48 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <AutoCompleteTextView
+                    android:paddingLeft="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:textSize="16sp"
+                    android:fontFamily="sans-serif"
+                    android:popupBackground="#fff"
+                    android:textColor="#fff"
+                    android:id="@+id/input_search"
+                    android:background="@null"
+                    android:hint="Enter Address, City or Zip Code"
+                    android:imeOptions="actionSearch"/>
+
+                <TextView
+                    android:id="@+id/txtCurrentPlactName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:layout_marginLeft="10dp"
+                    android:text="Dhaka,Bangladesh"
+                    android:textColor="@android:color/white"
+                    android:textSize="20dp" />
+
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20dp"
                     android:layout_weight="1.5"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/txtCurrentPlactName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/arimo"
-                        android:text="Dhaka,Bangladesh"
-                        android:textColor="@android:color/white"
-                        android:textSize="20dp" />
 
 
                     <TextView
@@ -55,7 +78,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:layout_marginTop="10dp"
-                        android:fontFamily="@font/arimo"
+                        android:fontFamily="sans-serif"
                         android:gravity="start"
                         android:text="30°c"
                         android:textColor="@android:color/white"
@@ -66,7 +89,7 @@
                         android:id="@+id/txtCurrentWeatherCondition"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/arimo"
+                        android:fontFamily="sans-serif"
                         android:text="Rain"
                         android:textColor="@android:color/white"
                         android:textSize="20dp" />
@@ -75,6 +98,7 @@
                     <TextView
                         android:id="@+id/txtDetailsVisibily"
                         android:layout_width="match_parent"
+                        android:fontFamily="sans-serif"
                         android:layout_height="wrap_content"
                         android:text="বাতাসের গতিবেগ: 20.6m/s"
                         android:textColor="@android:color/white"
@@ -84,19 +108,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/arimo"
+                        android:fontFamily="sans-serif"
                         android:text="চাপ: 996.0 hPa"
-                        android:textColor="@android:color/white"
-                        android:textSize="20dp" />
-
-                    <TextView
-                        android:id="@+id/txtCurrentMin"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/arimo"
-                        android:text="সর্বোনিম্ন: 24°c"
-                        android:drawableRight="@drawable/down"
-                        android:drawablePadding="10dp"
                         android:textColor="@android:color/white"
                         android:textSize="20dp" />
 
@@ -107,18 +120,27 @@
                         android:drawableRight="@drawable/up1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/arimo"
+                        android:fontFamily="sans-serif"
                         android:text="সর্বোচ্চ:    35°c"
                         android:textColor="@android:color/white"
                         android:textSize="20dp" />
 
+                    <TextView
+                        android:id="@+id/txtCurrentMin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif"
+                        android:text="সর্বোনিম্ন: 24°c"
+                        android:drawableRight="@drawable/down"
+                        android:drawablePadding="10dp"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp" />
 
 
                 </LinearLayout>
 
 
                 <LinearLayout
-                    android:layout_marginTop="20dp"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -126,31 +148,35 @@
 
 
                     <ImageView
-                        android:layout_marginTop="70dp"
-                        android:src="@drawable/weather_image"
+                        android:id="@+id/imageCurrent"
                         android:layout_width="100dp"
-                        android:layout_height="100dp" />
+                        android:layout_height="100dp"
+                        android:layout_gravity="end"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="40dp"
+                        android:src="@drawable/weather_image" />
 
                     <TextView
-                        android:id="@+id/txtSunSet"
+                        android:id="@+id/txtSunrise"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/arimo"
+                        android:fontFamily="sans-serif"
                         android:text="সূর্যোদয়: 5.20 am"
                         android:textColor="@android:color/white"
                         android:textSize="18dp" />
 
                     <TextView
-                        android:id="@+id/txtMoon"
+                        android:id="@+id/txtSunSet"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/arimo"
-                        android:text="সূর্যাস্ত:    7.00 pm"
+                        android:fontFamily="sans-serif"
+                        android:text="   সূর্যাস্ত: 7.00 pm"
                         android:textColor="@android:color/white"
                         android:textSize="18dp" />
 
-
                 </LinearLayout>
+
+            </LinearLayout>
 
             </LinearLayout>
 
