--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <item android:title="Settings"  android:id="@+id/itemSettings"/>
     <item android:title="About Us"  android:id="@+id/itemAbout"/>
-    <item android:title="Feedback"  android:id="@+id/itemFeedback"/>
+    <item android:title="More Apps"  android:id="@+id/itemFeedback"/>
     <item android:title="Future Feature"  android:id="@+id/itemFuture_Feature"/>
 
 
