--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,25 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--<color name="colorPrimary">#E91E63</color>-->
-    <!--<color name="colorPrimaryDark">#C2185B</color>-->
-    <!--<color name="primary_light">#F8BBD0</color>-->
-    <!--<color name="colorAccent">#FF4081</color>-->
-    <!--<color name="primary_text">#212121</color>-->
-    <!--<color name="secondary_text">#757575</color>-->
-    <!--<color name="icons">#FFFFFF</color>-->
-    <!--<color name="divider">#BDBDBD</color>-->
-
-
-    <!--<color name="colorPrimary">#9C27B0</color>-->
-    <!--<color name="colorPrimaryDark">#7B1FA2</color>-->
-    <!--<color name="primary_light">#E1BEE7</color>-->
-    <!--<color name="colorAccent">#7C4DFF</color>-->
-    <!--<color name="primary_text">#212121</color>-->
-    <!--<color name="secondary_text">#757575</color>-->
-    <!--<color name="icons">#FFFFFF</color>-->
-    <!--<color name="divider">#BDBDBD</color>-->
-
+    <color name="colorButton">#0277bd</color>
     <color name="colorPrimary">#0e67b4</color>
     <color name="colorPrimary1">#06b4ca</color>
     <color name="colorPrimary2">#54c5d2</color>
